--- a/.github/workflows/hawthorn.yml
+++ b/.github/workflows/hawthorn.yml
@@ -1,20 +1,26 @@
-name: hawthorn
-run-name: Setting up the Hawthorn database
-on: [push]
+name: Database update
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
-  test-output:
+  update-database:
     runs-on: ubuntu-latest
     steps:
-    - name: Test Output
-      run: echo "Here is a test"
+      - name: Setup
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
 
-  connect-remote:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: yarn install
 
-    - name: Show databases
-      run: mysql -h ${{ secrets.DB_HOSTNAME }} --port 3306 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "SHOW DATABASES";
-
-    - name: Run a sample SQL on remote
-      run: mysql -h ${{ secrets.DB_HOSTNAME }} --port 3306 -u${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} ${{ secrets.DB_NAME }} < wp_site2.sql
+      - name: Run database update
+        run: yarn run update-database
+        env:
+  DATABASE_HOST: ${{ secrets.DB_HOSTNAME }}
+  DATABASE_USERNAME: ${{ secrets.DB_USER }}
+  DATABASE_PASSWORD: ${{ secrets.DB_PASSWORD }}
+  DATABASE_NAME: ${{ secrets.DB_NAME }}
