--- a/.github/workflows/hawthorn.yml
+++ b/.github/workflows/hawthorn.yml
@@ -8,9 +8,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: liquibase-github-actions/update-sql@v4.25.0
         with:
-          changelogFile: "wp_site2.sql"
-          url: "jdbc:mysql://${{ secrets.DB_HOSTNAME }}:3306/${{ secrets.DB_NAME }}"
-          username: "${{ secrets.DB_USER }}"
-          password: "${{ secrets.DB_PASSWORD }}"
+    changelogFile: "wp_site2.sql"
+    url: "jdbc:mysql://${{ secrets.DB_HOSTNAME }}:3306/${{ secrets.DB_NAME }}"
+    username: "${{ secrets.DB_USER }}"
+    password: "${{ secrets.DB_PASSWORD }}"
+    driver: "com.mysql.cj.jdbc.Driver"
+    logLevel: "debug"  # Ajouter cette option pour des journaux détaillés
+
       - name: Test Output (optional)
         run: echo "Database updated successfully!"
