--- a/.github/workflows/hawthorn.yml
+++ b/.github/workflows/hawthorn.yml
@@ -12,6 +12,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Show databases
-      run: mysql -h ${{ secrets.DB_HOSTNAME }} --port 3306 -u ${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "SHOW DATABASES";
+      run: mysql -h ${{secrets.DB_HOSTNAME}} --port 3306 -U${{secrets.DB_USER}} -p${{secrets.DB_PASSWORD}} -e "SHOW DATABASES";
     - name: Run a sample SQL on remote
-      run: mysql -h ${{ secrets.DB_HOSTNAME }} --port 3306 -u ${{ secrets.DB_USER }} -p${{ secrets.DB_PASSWORD }} -e "wp_site2.sql";
+      run: mysql -h ${{secrets.DB_HOSTNAME}} --port 3306 -U${{secrets.DB_USER}} -p${{secrets.DB_PASSWORD}} -e "wp_site2.sql";
