--- a/.github/workflows/hawthorn.yml
+++ b/.github/workflows/hawthorn.yml
@@ -8,18 +8,16 @@ on:
 jobs:
   update-database:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4  # Version 3 est la dernière stable
-      - uses: liquibase/liquibase-github-action@v7  # Version 4 est la dernière
-        with:
-          operation: 'update'
-          classpath: 'example/changelogs'
-          changeLogFile: 'wp_site2.sql'
-          url: ${{ secrets.DB_HOSTNAME }}  # Utiliser la chaîne de connexion complète
-          username: ${{ secrets.DB_USERNAME }}
-          password: ${{ secrets.DB_PASSWORD }}
-      - name: Vérifier le succès de la mise à jour  # Étape supplémentaire
+      - uses: actions/checkout@v4
+      - name: Mettre à jour la base de données
         run: |
-          # Code pour vérifier la réussite de la mise à jour
-          # Vous pouvez utiliser liquibase status ou une requête SQL
+          # Importez les informations de connexion à la base de données
+          DATABASE_HOSTNAME=$(echo ${{ secrets.DB_HOSTNAME }})
+          DATABASE_USER=$(echo ${{ secrets.DB_USER }})
+          DATABASE_PASSWORD=$(echo ${{ secrets.DB_PASSWORD }})
+          DATABASE_NAME=$(echo ${{ secrets.DB_NAME }})
+
+          # Exécutez le script de mise à jour de la base de données
+          mysql -h $DATABASE_HOSTNAME -u $DATABASE_USER -p$DATABASE_PASSWORD $DATABASE_NAME < update.sql
+
