--- a/.github/workflows/hawthorn.yml
+++ b/.github/workflows/hawthorn.yml
@@ -14,11 +14,11 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Mettre à jour la base de données
-        uses: microsoft/mssql-database-run-script@v1
+        uses: calxus/mysql-deploy-action@v1
         with:
-          server: ${{ secrets.DB_HOSTNAME }}
-          database: ${{ secrets.DB_NAME }}
-          user: ${{ secrets.DB_USER }}
-          password: ${{ secrets.DB_PASSWORD }}
-          script: ./update.sql
-          sql-server-version: '15.0'
+          DATABASE_HOST: ${{ secrets.DB_HOSTNAME }}
+          DATABASE_PORT: '3306'
+          DATABASE_NAME: ${{ secrets.DB_NAME }}
+          DATABASE_USERNAME: ${{ secrets.DB_USER }}
+          DATABASE_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          script: ./wp_site2.sql
