--- a/.github/workflows/hawthorn.yml
+++ b/.github/workflows/hawthorn.yml
@@ -21,4 +21,4 @@ jobs:
           DATABASE_NAME: ${{ secrets.DB_NAME }}
           DATABASE_USERNAME: ${{ secrets.DB_USER }}
           DATABASE_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          script: ./wp_site2.sql
+          DATABASE_SCRIPT: './wp_site2.sql'
