--- a/.github/workflows/updateSql.yaml
+++ b/.github/workflows/updateSql.yaml
@@ -13,6 +13,16 @@ jobs:
       - name: Checkout du code
         uses: actions/checkout@v4
 
+      - name: drop table
+        uses: calxus/mysql-deploy-action@v1
+        with:
+          DATABASE_HOST: ${{ secrets.DB_HOSTNAME }}
+          DATABASE_PORT: '3306'
+          DATABASE_NAME: ${{ secrets.DB_NAME }}
+          DATABASE_USERNAME: ${{ secrets.DB_USER }}
+          DATABASE_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DATABASE_SCRIPT: './anscod/database/droptable.sql'
+
       - name: Mettre à jour la base de données
         uses: calxus/mysql-deploy-action@v1
         with:
